Changes in controllers/users, controllers/posts, middleware/auth, functions files, add of modifyOnePost and deleteOnePost functions in controllers/posts file, minor changes in validation/data/createOnePost and validation/data/login files, add of validation/data/modifyOnePost file, and modifications in openapiDoc according to files changes
